<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_student"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:layout_margin="@dimen/dp_5"
        android:padding="@dimen/dp_5"
        android:scrollbars="vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="2"
            android:padding="@dimen/dp_10"
            android:text="@string/name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_year_of_birth"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="2"
            android:padding="@dimen/dp_10"
            android:text="@string/year_of_birth"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />

        <EditText
            android:id="@+id/edt_year_of_birth"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_phone_number"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="2"
            android:padding="@dimen/dp_10"
            android:text="@string/phone_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />

        <EditText
            android:id="@+id/edt_phone_number"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="3"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_field"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="2"
            android:padding="@dimen/dp_10"
            android:text="@string/field"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />

        <EditText
            android:id="@+id/edt_field"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="@dimen/dp_16" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_level"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="2"
            android:padding="@dimen/dp_10"
            android:text="@string/level"
            android:textColor="@android:color/black"
            android:textSize="@dimen/dp_16" />

        <EditText
            android:id="@+id/edt_level"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_weight="3"
            android:gravity="center"
            android:textSize="@dimen/dp_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_20"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btn_remove"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/remove" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <Button
            android:id="@+id/btn_sort_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/sort_name" />

        <Button
            android:id="@+id/btn_sort_year"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/sort_year" />

        <Button
            android:id="@+id/btn_sort_phone_number"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/sort_phone_number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:padding="@dimen/dp_5">

        <Button
            android:id="@+id/btn_filter_col"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/filter_col" />

        <Button
            android:id="@+id/btn_filter_uni"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/filter_uni" />

        <Button
            android:id="@+id/btn_show"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_50"
            android:layout_margin="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/show_list"
            android:textSize="@dimen/dp_16" />

    </LinearLayout>

</LinearLayout>